# cpp_channel

./: .clang-format  CMakeLists.txt  LICENSE  README.md  TODO.md
bench/: channel_benchmark.cpp
include/channel/: channel.hpp
test/: test_channel_1.cpp
